# Stockfish

./: .clang-format  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cooffe.idesettings  Copying.txt  Introduction-To-Stockfish.txt  Jenkinsfile  Makefile  McBrain-92.uci  McBrain-93_Pi  McBrain-95_Pi  McBrain-95_piv2  OQ161  Pseudo code  README.md  READMEAlt230304.md  README_.md  Readme.md  Readme.txt  Release.rar  SFclang  SFclangpgo  SFgcc  SFgccpgo  STATUS  Top CPU Contributors.txt  appveyor.yml  bench  bench.txt  bitboard.cpp  build.ninja  configure.py  contribution.txt  doc_file.txt  (+22 more)
.github/: CONTRIBUTING.md  OPTIMIZATION_GUIDE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  config.yml
.github/ci/: arm_matrix.json  libcxx17.imp  macos_matrix.json  matrix.json  universal_matrix.json
.github/workflows/: SFMnpsNoPGO_ArmWinBinariesUpload.yml  SFMnps_ArmWinBinariesUpload.yml  SFSXnps_WinBinaryUpload.yml  SFSnps_ArmWinBinariesUpload.yml  SFnps_ArmBinaries.yml  SFnps_ArmWinBinariesUpload.yml  StFi_arm_binaries.yml  StFi_binaries.yml  StFi_compile_test.yml  StFi_sanitizers.yml  StFi_start.yml  StFi_test.yml  arm_compilation.yml  artifact-management.yml  avx2_compilers.yml  build.yml  cache-optimization.yml  clang-format.yml  codeql.yml  compilation.yml  contributors-update.yml  games.yml  iwyu.yml  libcxx17.imp  lint-integer-types.yml  matetrack.yml  msvc.yml  njsscan.yml  optimization-suite.yml  performance-monitoring.yml  sanitizers.yml  security-enhanced.yml  semantic-pull-request.yml  smart-testing.yml  stockfish.yml  stockfish.yml.LOCAL  stockfish_ArmWinBinariesUpload.yml  stockfish_analyzers.yml  stockfish_armBinaries.yml  stockfish_armBinariesTest.yml  (+19 more)
.hg/: 00changelog.i  fsmonitor.state  requires
.hg/store/: requires
Avalonia UI/: NexusChess.sln  readme.md
Avalonia UI/NexusChess.Core/: ChessGame.cs  Class1.cs
Avalonia UI/NexusChess.Desktop/: App.axaml  MainWindow.axaml  MainWindow.axaml.cs  NexusChess.Desktop.csproj  Program.cs  app.manifest
Avalonia UI/NexusChess.ViewModels/: Class1.cs  NexusChess.ViewModels.csproj
GUI/: readme.md
Stockfish-stockfish-dev-20250602-5337edfd/Stockfish-stockfish-dev-20250602-5337edfd/: README.md
StockfishMac/StockfishMac.xcodeproj/: project.pbxproj
android/: Android.mk  Application.mk  adb_log.bat  build.bat
android/NDKTest/: build.gradle  settings.gradle
android/NDKTest/app/src/main/cpp/: CMakeLists.txt
books/: alekhine  anand  botvinnik  capablanca  carlsen  champions  fischer  karpov  kasparov  kortschnoi  kramink  lasker  petrosian  readme.txt  tal
cmake/: DownloadNet.cmake  EnableFlags.cmake
docs/: binpack.md  convert.md  generate_training_data.md  generate_training_data_nonpv.md  gensfen.md  gensfen_nonpv.md  learn.md  stats.md  transform.md  validate_training_data.md
gui/: package-lock.json  package.json  server.js
gui/public/: app.js  index.html  style.css
jni/: Android.mk  Application_v7.mk  Application_v8.mk  CMakeLists.txt  Readme.md  build.sh
jni/src/main/cpp/: jstockfish.cpp
jni/src/main/java/jstockfish/: OutputListener.java  Position.java  State.java  Uci.java
matrix-gui/: README.md  main.js  package-lock.json  package.json  preload.js
matrix-gui/engine/: README.md
matrix-gui/public/: index.html
matrix-gui/src/: App.jsx  index.js
script/: README.md  extract_bin.py  interleave_binpacks.py  make_release.py  pgn_to_plain.py  shuffle_binpack.py
scripts/: check_universal.sh  check_universal_arm.sh  check_universal_macos.sh  check_universal_riscv.sh  contributors-update.py  get_native_properties.sh  lint_integer_types.py  net.sh  sve-vl.sh
src/: .depend  .gitattributes  .gitignore  .movegen.cpp.swp  Analysis.inc  App.inc  AppCenterEditorExtensions-v2.0.0.unitypackage  Build x64 - Ubuntu Commands.txt  Build x64.cmd  Chatdefs.inc  Countries.inc  Makefile  Makefile - Stockfish 10 with additional features  Makefile McCain  Makefile McCain with Matefinder  Makefile Stockfish with Matefinder and features  Makefile Stockfish with features  Makefile-Matefinder  Makefile-McCain  Makefile-McCain with Matefinder  Makefile-SF-Matefinder  Makefile-Stockfish with Matefinder and Features  Makefile220218  Makefile220602  MakefileCECSA  MakefileSFnps  Makefile_  Makefile_Droid  McBrain Build All.cmd  McBrain-96_macOS_clang  McBrain-96_macOS_gcc  McBrain.sln  McBrain.vcxproj  McBrain.vcxproj.filters  McCain Build All.cmd  Mia.inc  PGOBENCH.out  PosTutor.inc  ReplayTraining.inc  Textures.inc  (+146 more)
src/arch/: .clang-format
src/docs/: convert.md  gensfen.md  learn.md
src/eval/: evaluate_common.h  evaluate_mir_inv_tools.cpp  evaluate_mir_inv_tools.h
src/extra/: nnue_data_binpack_format.h  sfen_packer.cpp  sfen_packer.h  stockfish_blas.cpp  stockfish_blas.h
src/incbin/: README.md  UNLICENCE  incbin.c  incbin.h
src/learn/: autograd.h  convert.cpp  convert.h  gensfen.cpp  gensfen.h  gensfen2019.cpp  gensfen_nonpv.cpp  gensfen_nonpv.h  half_float.h  learn.cpp  learn.h  learner.cpp  learning_tools.cpp  learning_tools.h  multi_think.cpp  multi_think.h  opening_book.cpp  opening_book.h  packed_sfen.h  sfen_packer.cpp  sfen_packer.h  sfen_reader.h  sfen_stream.h  sfen_writer.h  stats.cpp  stats.h  transform.cpp  transform.h
src/msvc/: get_default_eval_file.cmd  stockfish.sln  stockfish.vcxproj  stockfish.vcxproj.filters
src/nnue/: evaluate_nnue.cpp  evaluate_nnue.h  evaluate_nnue_learner.cpp  evaluate_nnue_learner.h  network.cpp  network.h  nnue_accumulator.cpp  nnue_accumulator.h  nnue_accumulator_fwd.h  nnue_architecture.h  nnue_architectureM.h  nnue_architectureS.h  nnue_common.h  nnue_feature_transformer.h  nnue_feature_transformer.ispc  nnue_feature_transformer_fwd.h  nnue_feature_transformer_scalar.h  nnue_feature_transformer_vec.h  nnue_misc.cpp  nnue_misc.h  simd.h  (+4 more)
syzygy/: tbprobe.cpp
tests/: Review.py  instrumented.py  instrumented.sh  instrumented_learn.sh  perft.exp  perft.sh  reprosearch.sh  signature.sh  skill.sh  testing.py  travis.sh
win/: build_app.bat  build_dll.bat  build_so.bat
(+360 files in other folders)
